--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+
+* {
+  font-family: "Poppins", sans-serif;
+}
+.form {
+  width: 80%;
+  margin: 60px auto 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form span {
+  font-size: 25px;
+  margin-right: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form input {
+  margin-right: 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.form button {
+  border: none;
+  padding: 15px;
+  font-size: 20px;
+  background-color: #08a1a1;
   color: white;
+  border-radius: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.validacion {
+  width: 80%;
+  color: red;
+  margin: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.lista {
+  width: 80%;
+  margin: 50px auto;
+}
+
+.tarea {
+  font-size: 20px;
+  margin: 20px 0 15px 0;
+  display: grid;
+  grid-template-columns: 3fr 1fr 1fr;
+}
+
+.borrar {
+  cursor: pointer;
+}
+
+.title {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  font-size: 30px;
+  margin: 30px;
 }
